Testing if centering text on emoji0 will fix on mobile

--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ h1{
     font-size: 8vw;
     border: none;
     background-color: white;
+    text-align: center;
 }
 
 .emoji1 {
